--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                         fill="#FFF8F2"
                       ></path>
                     </svg>
-                    <div id="bulle2">
+                    <div id="bulle2" class="hidden">
                       <picture>
                         <source
                           media="(min-width: 768px)"
@@ -435,7 +435,7 @@
                           src="assets/homethird.png"
                           width="710"
                           height="553"
-                          srcset=""
+                          srcset="assets/homethird.png"
                           alt="screenshot"
                           loading="lazy"
                         />
@@ -483,11 +483,10 @@
                         <span class="num2">100</span>
                         <span class="prcnt">%</span>
                       </div>
-                      
+
                       <span class="infochiffre"> de clients satisfaits</span>
                     </div>
                   </div>
-                  
                 </div>
               </div>
 
@@ -536,17 +535,22 @@
                           fill="#FFF8F2"
                         ></path>
                       </svg>
-                      <div id="bulle3" class="left img-wrapper">
-                        <img
-                          class="img-fluid"
-                          src="assets/homefourth.png"
-                          style="object-fit: contain"
-                          srcset=""
-                          width="445"
-                          height="1200"
-                          alt=""
-                          loading="lazy"
-                        />
+                      <div id="bulle3" class="hidden">
+                        <picture>
+                          <source
+                            media="(min-width: 768px)"
+                            srcset="assets/homefourth.png"
+                          />
+                          <img
+                            class="img-fluid h-auto w-100"
+                            src="assets/homefourth.png"
+                            width="710"
+                            height="553"
+                            srcset="assets/homefourth.png"
+                            alt="another image"
+                            loading="lazy"
+                          />
+                        </picture>
                       </div>
                     </div>
                     <div class="col-md-6">
@@ -940,17 +944,22 @@
                           fill="#FFF8F2"
                         ></path>
                       </svg>
-                      <div id="bulle5" class="left img-wrapper">
-                        <img
-                          class="img-fluid"
-                          src="assets/homeheighth.png"
-                          style="object-fit: contain"
-                          srcset=""
-                          width="445"
-                          height="827"
-                          alt=""
-                          loading="lazy"
-                        />
+                      <div id="bulle5" class="hidden">
+                        <picture>
+                          <source
+                            media="(min-width: 768px)"
+                            srcset="assets/homeheighth.png"
+                          />
+                          <img
+                            class="img-fluid h-auto w-100"
+                            src="assets/homeheighth.png"
+                            width="710"
+                            height="553"
+                            srcset="assets/homeheighth.png"
+                            alt="bulle5"
+                            loading="lazy"
+                          />
+                        </picture>
                       </div>
                     </div>
                     <div class="col-md-6 offset-md-1">
