--- a/tarif.html
+++ b/tarif.html
@@ -301,7 +301,7 @@
                   </div>
                   <div class="description">
                     <p>
-                      Le logiciel Meeko inclut toutes les fonctionnalités dans
+                      Le logiciel May'Tech inclut toutes les fonctionnalités dans
                       l'abonnement
                       <strong>sans aucun frais supplémentaire</strong>. Vous
                       n'aurez donc pas à payer des frais d'inscription ou une
