--- a/tarif.html
+++ b/tarif.html
@@ -13,7 +13,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="#" />
     <meta http-equiv="content-language" content="fr-fr" />
-    <script defer src="js/index.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
   </head>
 
   <body>
@@ -301,8 +305,8 @@
                   </div>
                   <div class="description">
                     <p>
-                      Le logiciel May'Tech inclut toutes les fonctionnalités dans
-                      l'abonnement
+                      Le logiciel May'Tech inclut toutes les fonctionnalités
+                      dans l'abonnement
                       <strong>sans aucun frais supplémentaire</strong>. Vous
                       n'aurez donc pas à payer des frais d'inscription ou une
                       formation, cela est
@@ -311,12 +315,7 @@
                     <p>&nbsp;</p>
                     <p>Le support et les mises à jour sont également inclus.</p>
                   </div>
-                  <a
-                    href=""
-                    class="cta-primary"
-                  >
-                    Nous contacter
-                  </a>
+                  <a href="" class="cta-primary"> Nous contacter </a>
                 </div>
 
                 <div class="col-md-7 col-12 offset-0">
@@ -370,27 +369,17 @@
                       </p>
                       <p>&nbsp;</p>
                     </div>
-                    <a
-                      href=""
-                      class="cta-primary white"
-                    >
+                    <a href="" class="cta-primary white">
                       Demander pour un besoin spécifique
                     </a>
                   </div>
                 </div>
 
                 <div class="col-md-4 card-inner">
-                  <a
-                    href=""
-                    class="card"
-                  >
+                  <a href="" class="card">
                     <div class="up mb-2">
                       <div class="left mr-1">
-                        <img
-                          src=""
-                          class="blue"
-                          alt=""
-                        />
+                        <img src="" class="blue" alt="" />
                       </div>
                       <div class="right">
                         <div class="sub-title">Lorem ipsum dolor sit.</div>
@@ -491,17 +480,10 @@
                 </div>
 
                 <div class="col-md-4 card-inner">
-                  <a
-                    href=""
-                    class="card"
-                  >
+                  <a href="" class="card">
                     <div class="up mb-2">
                       <div class="left mr-1">
-                        <img
-                          src=""
-                          class="green"
-                          alt=""
-                        />
+                        <img src="" class="green" alt="" />
                       </div>
                       <div class="right">
                         <div class="sub-title">Lorem ipsum dolor sit.</div>
@@ -604,17 +586,10 @@
                 </div>
 
                 <div class="col-md-4 card-inner">
-                  <a
-                    href=""
-                    class="card"
-                  >
+                  <a href="" class="card">
                     <div class="up mb-2">
                       <div class="left mr-1">
-                        <img
-                          src=""
-                          class="yellow"
-                          alt=""
-                        />
+                        <img src="" class="yellow" alt="" />
                       </div>
                       <div class="right">
                         <div class="sub-title">Lorem, ipsum dolor.</div>
@@ -717,17 +692,10 @@
                 </div>
 
                 <div class="col-md-4 card-inner">
-                  <a
-                    href=""
-                    class="card"
-                  >
+                  <a href="" class="card">
                     <div class="up mb-2">
                       <div class="left mr-1">
-                        <img
-                          src=""
-                          class="blue"
-                          alt=""
-                        />
+                        <img src="" class="blue" alt="" />
                       </div>
                       <div class="right">
                         <div class="sub-title">Lorem. &amp; Lorem.</div>
@@ -854,10 +822,34 @@
               </div>
               <div id="logo-carousel" class="logo-carousel position-relative">
                 <div id="carousel" class="carousel carousel-gradient">
-                  <img src="assets/westcode2.png" class="img-fluid" alt="Logo Westcode" />
-                  <img src="assets/sagat.png" class="img-fluid" alt="Logo Sagat développement" />
-                  <img src="lt24.webp" class="img-fluid" alt="Logo LT24" />
-                  <img src="assets/showpizz.png" class="img-fluid" alt="Logo showpizz" />
+                  <div>
+                    <img
+                      src="assets/westcode2.png"
+                      class="img-fluid"
+                      alt="Logo Westcode"
+                    />
+                  </div>
+                  <div>
+                    <img
+                      src="assets/sagat.png"
+                      class="img-fluid"
+                      alt="Logo Sagat développement"
+                    />
+                  </div>
+                  <div>
+                    <img
+                      src="assets/lt24.webp"
+                      class="img-fluid"
+                      alt="Logo LT24"
+                    />
+                  </div>
+                  <div>
+                    <img
+                      src="assets/showpizz.png"
+                      class="img-fluid"
+                      alt="Logo showpizz"
+                    />
+                  </div>
                 </div>
               </div>
             </div>
@@ -880,7 +872,10 @@
                   <div class="img-wrapper">
                     <div class="wrapper">
                       <picture>
-                        <source media="(min-width: 768px)" srcset="assets/team.png" />
+                        <source
+                          media="(min-width: 768px)"
+                          srcset="assets/team.png"
+                        />
                         <img
                           src="assets/team.png"
                           srcset=""
@@ -1158,12 +1153,7 @@
                       afin de vous faire votre propre avis !
                     </div>
 
-                    <a
-                      href=""
-                      class="cta-primary white"
-                    >
-                      Demander une démo
-                    </a>
+                    <a href="" class="cta-primary white"> Demander une démo </a>
                   </div>
                 </div>
               </div>
@@ -1256,11 +1246,33 @@
         </div>
       </div>
     </div>
+
     <script
-      defer
-      src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-      integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
-      crossorigin="anonymous"
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
     ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+
+    <script type="text/javascript">
+      console.log('hello')
+      $(document).ready(function(){
+        $('.carousel').slick({
+          infinite: true,
+          autoplay: true,
+          autoplaySpeed: 2000,
+          slidesToShow: 3,
+          slidesToScroll: 1,
+          arrows: false,
+        });
+      });
+    </script>
+
   </body>
 </html>
