--- a/offre.html
+++ b/offre.html
@@ -1404,7 +1404,7 @@
       >
       <!-- Sticky arrow-up -->
 
-      <div data-global-resource-path="meeko/templates/partials/footer.html">
+      <div data-global-resource-path="">
         <div
           id="hs_cos_wrapper_footer"
           class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module"
@@ -1423,7 +1423,7 @@
                           src="assets/logo.png"
                           class="mb-1"
                           loading="lazy"
-                          id="logo-meeko"
+                          id="logo-maytech"
                           alt=""
                           width="128"
                           height="120"
