--- a/index.html
+++ b/index.html
@@ -1078,4 +1078,89 @@
       <!-- Sticky arrow-up -->
 
       
-      
+      <div data-global-resource-path="">
+        <div
+          id="hs_cos_wrapper_footer"
+          class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module"
+          style=""
+          data-hs-cos-general-type="widget"
+          data-hs-cos-type="module"
+        >
+          <div id="" class="section-footer">
+            <div class="main-footer">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-2">
+                    <div class="left pt-1">
+                      <a href="index.html">
+                        <img
+                          src="assets/logo.png"
+                          class="mb-1"
+                          loading="lazy"
+                          id="logo-maytech"
+                          alt=""
+                          width="128"
+                          height="120"
+                          srcset="assets/logo.png"
+                          sizes="(max-width: 128px) 100vw, 128px"
+                        />
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-md-9 offset-md-1">
+                    <div class="line">
+                      <div class="bloc">
+                        <div class="title">Notre offre</div>
+                        <div>
+                          <a href="#"> Lorem, ipsum. </a>
+
+                          <a href="#"> Lorem, ipsum. </a>
+
+                          <a href="#"> Lorem, ipsum. </a>
+
+                          <a href="#"> Site internet </a>
+                        </div>
+                      </div>
+
+                      <div class="bloc">
+                        <div class="title">Contact</div>
+                        <div>
+                          <a href="contact.html"> Contactez-nous </a>
+
+                          <a href="#"> Nous rejoindre </a>
+
+                          <a href="#"> Conditions d'utilisation </a>
+                        </div>
+                      </div>
+
+                      <div class="bloc">
+                        <div class="title">A propos</div>
+                        <div>
+                          <a href="offre.html"> Nos applications </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="sub-footer">
+              <div class="container">
+                <div class="row">
+                  <div class="line">
+                    <a href=""> Mentions légales </a>
+
+                    <a href=""> Politiques de confidentialités </a>
+
+                    <a href=""> Plan de site </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
+
