--- a/tarif.html
+++ b/tarif.html
@@ -13,11 +13,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="#" />
     <meta http-equiv="content-language" content="fr-fr" />
+    <!-- carousel -->
     <link
       rel="stylesheet"
       type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
+    <!-- carousel -->
   </head>
 
   <body>
