--- a/offre.html
+++ b/offre.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/style2.css" />
     <link rel="canonical" href="#" />
+    <script defer src="js/block.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="#" />
     <meta http-equiv="content-language" content="fr-fr" />
@@ -355,8 +356,8 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-4" id="cahier_de_transmission">
-                  <div class="tab mb-md-2 mb-1" data-index="1" id="defaultOpen">
+                <div class="col-4 " id="cahier_de_transmission">
+                  <div class="onglet tab mb-md-2 mb-1 activeofonglet" data-index="1" id="defaultOpen">
                     <img
                       src="#"
                       alt="picto cahier de suivi "
@@ -379,7 +380,7 @@
                 </div>
 
                 <div class="col-4" id="messagerie">
-                  <div class="tab mb-md-2 mb-1" data-index="2" id="">
+                  <div class="onglet tab mb-md-2 mb-1" data-index="2" id="">
                     <img
                       src="#"
                       alt="picto messagerie"
@@ -402,7 +403,7 @@
                 </div>
 
                 <div class="col-4" id="actualites">
-                  <div class="tab mb-md-2 mb-1" data-index="3" id="">
+                  <div class="onglet tab mb-md-2 mb-1" data-index="3" id="">
                     <img
                       src="#"
                       alt="picto actualités"
@@ -425,7 +426,7 @@
                 </div>
 
                 <div class="col-4" id="albums_photos">
-                  <div class="tab mb-md-2 mb-1" data-index="4" id="">
+                  <div class="onglet tab mb-md-2 mb-1" data-index="4" id="">
                     <img
                       src="#"
                       alt="picto  photo"
@@ -449,7 +450,7 @@
                 </div>
 
                 <div class="col-4" id="absences_reservations">
-                  <div class="tab mb-md-2 mb-1" data-index="5" id="">
+                  <div class="onglet tab mb-md-2 mb-1" data-index="5" id="">
                     <img
                       src="#"
                       alt="picto gestion"
@@ -472,7 +473,7 @@
                 </div>
 
                 <div class="col-4" id="factures_et_reglements">
-                  <div class="tab mb-md-2 mb-1" data-index="6" id="">
+                  <div class="onglet tab mb-md-2 mb-1" data-index="6" id="">
                     <img
                       src="#"
                       alt="picto facture"
@@ -496,7 +497,7 @@
               </div>
 
               <div class="content-area mt-md-4 mt-3">
-                <div class="tab-content" data-index="1">
+                <div class="tab-content activeofonglet" data-index="1">
                   <div class="row d-flex align-items-center">
                     <div class="col-md-6 col-12">
                       <div class="illustrations-area">
