--- a/tarif.html
+++ b/tarif.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/style2.css" />
     <link rel="canonical" href="#" />
+    <script defer src="js/quest.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="#" />
     <meta http-equiv="content-language" content="fr-fr" />
