--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         <div class="row d-flex align-items-center justify-content-center mb-md-8 mb-4">
             <div class="col-md-2 col-6">
                 <a href="index.html">
-                    <img class="img-fluid" src="assets/logo.png" alt="" width="183" height="71" srcset="assets/logo.png" sizes="(max-width: 183px) 100vw, 183px">
+                    <img class="img-fluid" src="assets/logo.png" alt=""  srcset="assets/logo.png" sizes="(max-width: 183px) 100vw, 183px">
                 </a>
             </div>
         </div>
