--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/style2.css" />
     <link rel="canonical" href="#" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="#" />
     <meta http-equiv="content-language" content="fr-fr" />
@@ -346,62 +347,37 @@
 
                   <div class="assets pl-2 mb-1 pb-1">
                     <div class="asset d-flex align-items-center mb-1">
-                      <img
-                        src=""
-                        alt=""
-                        class="mr-1 green"
-                        width="24"
-                        height="24"
-                        loading="lazy"
-                      />
+                      <span class="material-symbols-outlined">
+                        toggle_on
+                        </span>
                       <span> Lorem, ipsum. &amp; lorem </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
-                      <img
-                        src=""
-                        alt=""
-                        class="mr-1 blue"
-                        width="24"
-                        height="24"
-                        loading="lazy"
-                      />
+                      <span class="material-symbols-outlined">
+                        key
+                        </span>
                       <span> Lorem ipsum dolor sit amet consectetur.</span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
-                      <img
-                        src=""
-                        alt=""
-                        class="mr-1 pink"
-                        width="24"
-                        height="24"
-                        loading="lazy"
-                      />
+                      <span class="material-symbols-outlined">
+                        sync
+                        </span>
                       <span> lorem &amp; Lorem, ipsum. </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
-                      <img
-                        src=""
-                        alt=""
-                        class="mr-1 yellow"
-                        width="24"
-                        height="24"
-                        loading="lazy"
-                      />
+                      <span class="material-symbols-outlined">
+                        done_outline
+                        </span>
                       <span> Lorem, ipsum dolor. </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
-                      <img
-                        src=""
-                        alt=""
-                        class="mr-1 blue"
-                        width="24"
-                        height="24"
-                        loading="lazy"
-                      />
+                      <span class="material-symbols-outlined">
+                        heart_plus
+                        </span>
                       <span
                         >Lorem ipsum dolor sit, amet consectetur adipisicing.
                       </span>
@@ -576,62 +552,37 @@
 
                         <div class="assets pl-2 mb-1 pb-1">
                           <div class="asset d-flex align-items-center mb-1">
-                            <img
-                              src=""
-                              alt=""
-                              class="mr-1 blue"
-                              loading="lazy"
-                              width="24"
-                              height="24"
-                            />
+                            <span class="material-symbols-outlined">
+                              swipe_left
+                              </span>
                             <span> Lorem, ipsum dolor. </span>
                           </div>
 
                           <div class="asset d-flex align-items-center mb-1">
-                            <img
-                              src=""
-                              alt=""
-                              class="mr-1 yellow"
-                              loading="lazy"
-                              width="24"
-                              height="24"
-                            />
+                            <span class="material-symbols-outlined">
+                              send_time_extension
+                              </span>
                             <span> Lorem, ipsum. </span>
                           </div>
 
                           <div class="asset d-flex align-items-center mb-1">
-                            <img
-                              src=""
-                              alt=""
-                              class="mr-1 pink"
-                              loading="lazy"
-                              width="24"
-                              height="24"
-                            />
+                            <span class="material-symbols-outlined">
+                              swipe_up
+                              </span>
                             <span> lorem &amp; Lorem, ipsum. </span>
                           </div>
 
                           <div class="asset d-flex align-items-center mb-1">
-                            <img
-                              src=""
-                              alt=""
-                              class="mr-1 green"
-                              loading="lazy"
-                              width="24"
-                              height="24"
-                            />
+                            <span class="material-symbols-outlined">
+                              data_info_alert
+                              </span>
                             <span> Lorem ipsum dolor sit. </span>
                           </div>
 
                           <div class="asset d-flex align-items-center mb-1">
-                            <img
-                              src=""
-                              alt=""
-                              class="mr-1 blue"
-                              loading="lazy"
-                              width="24"
-                              height="24"
-                            />
+                            <span class="material-symbols-outlined">
+                              clock_loader_20
+                              </span>
                             <span>
                               Lorem ipsum dolor sit amet consectetur.
                             </span>
@@ -640,15 +591,9 @@
 
                         <div class="quote-inner">
                           <div class="left mr-1">
-                            <img
-                              src=""
-                              alt=""
-                              width="47"
-                              height="30"
-                              loading="lazy"
-                              srcset=""
-                              sizes="(max-width: 47px) 100vw, 47px"
-                            />
+                            <span class="material-symbols-outlined">
+                              person_add
+                              </span>
                           </div>
                           <div class="right">
                             <div class="p">
@@ -779,62 +724,37 @@
 
                   <div class="assets pl-2 mb-1 pb-1">
                     <div class="asset d-flex align-items-center mb-1">
-                      <img
-                        src=""
-                        alt=""
-                        class="mr-1 pink"
-                        width="24"
-                        height="24"
-                        loading="lazy"
-                      />
+                      <span class="material-symbols-outlined">
+                        mood
+                        </span>
                       <span>Lorem, ipsum. &amp; lorem </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
-                      <img
-                        src=""
-                        alt=""
-                        class="mr-1 yellow"
-                        width="24"
-                        height="24"
-                        loading="lazy"
-                      />
+                      <span class="material-symbols-outlined">
+                        emoji_people
+                        </span>
                       <span> Lorem, ipsum. </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
-                      <img
-                        src=""
-                        alt=""
-                        class="mr-1 blue"
-                        width="24"
-                        height="24"
-                        loading="lazy"
-                      />
+                      <span class="material-symbols-outlined">
+                        whatshot
+                        </span>
                       <span> Lorem, ipsum dolor. &amp; lorem </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
-                      <img
-                        src=""
-                        alt=""
-                        class="mr-1 green"
-                        width="24"
-                        height="24"
-                        loading="lazy"
-                      />
+                      <span class="material-symbols-outlined">
+                        psychiatry
+                        </span>
                       <span> Lorem, ipsum.</span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
-                      <img
-                        src=""
-                        alt=""
-                        class="mr-1 pink"
-                        width="24"
-                        height="24"
-                        loading="lazy"
-                      />
+                      <span class="material-symbols-outlined">
+                        earthquake
+                        </span>
                       <span> lorem </span>
                     </div>
                   </div>
