--- a/offre.html
+++ b/offre.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/style2.css" />
     <link rel="canonical" href="#" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script defer src="js/block.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="#" />
@@ -358,14 +359,9 @@
               <div class="row">
                 <div class="col-4 " id="cahier_de_transmission">
                   <div class="onglet tab mb-md-2 mb-1 activeofonglet" data-index="1" id="defaultOpen">
-                    <img
-                      src="#"
-                      alt="picto cahier de suivi "
-                      width="24"
-                      height="26"
-                      class="h-auto"
-                      loading="lazy"
-                    />
+                    <span class="material-symbols-outlined">
+                      calendar_month
+                      </span>
                     <span class="tab-text">
                       <span
                         id="hs_cos_wrapper_widget_1634137838114_"
@@ -381,14 +377,9 @@
 
                 <div class="col-4" id="messagerie">
                   <div class="onglet tab mb-md-2 mb-1" data-index="2" id="">
-                    <img
-                      src="#"
-                      alt="picto messagerie"
-                      width="24"
-                      height="26"
-                      class="h-auto"
-                      loading="lazy"
-                    />
+                    <span class="material-symbols-outlined">
+                      mail
+                      </span>
                     <span class="tab-text">
                       <span
                         id="hs_cos_wrapper_widget_1634137838114_"
@@ -404,14 +395,9 @@
 
                 <div class="col-4" id="actualites">
                   <div class="onglet tab mb-md-2 mb-1" data-index="3" id="">
-                    <img
-                      src="#"
-                      alt="picto actualités"
-                      width="24"
-                      height="26"
-                      class="h-auto"
-                      loading="lazy"
-                    />
+                    <span class="material-symbols-outlined">
+                      feed
+                      </span>
                     <span class="tab-text">
                       <span
                         id="hs_cos_wrapper_widget_1634137838114_"
@@ -427,14 +413,9 @@
 
                 <div class="col-4" id="albums_photos">
                   <div class="onglet tab mb-md-2 mb-1" data-index="4" id="">
-                    <img
-                      src="#"
-                      alt="picto  photo"
-                      width="24"
-                      height="26"
-                      class="h-auto"
-                      loading="lazy"
-                    />
+                    <span class="material-symbols-outlined">
+                      photo_camera
+                      </span>
                     <span class="tab-text">
                       <span
                         id="hs_cos_wrapper_widget_1634137838114_"
@@ -451,14 +432,9 @@
 
                 <div class="col-4" id="absences_reservations">
                   <div class="onglet tab mb-md-2 mb-1" data-index="5" id="">
-                    <img
-                      src="#"
-                      alt="picto gestion"
-                      width="24"
-                      height="26"
-                      class="h-auto"
-                      loading="lazy"
-                    />
+                    <span class="material-symbols-outlined">
+                      approval_delegation
+                      </span>
                     <span class="tab-text">
                       <span
                         id="hs_cos_wrapper_widget_1634137838114_"
@@ -474,14 +450,9 @@
 
                 <div class="col-4" id="factures_et_reglements">
                   <div class="onglet tab mb-md-2 mb-1" data-index="6" id="">
-                    <img
-                      src="#"
-                      alt="picto facture"
-                      width="24"
-                      height="26"
-                      class="h-auto"
-                      loading="lazy"
-                    />
+                    <span class="material-symbols-outlined">
+                      local_atm
+                      </span>
                     <span class="tab-text">
                       <span
                         id="hs_cos_wrapper_widget_1634137838114_"
