modifs css diverse

--- a/index.html
+++ b/index.html
@@ -914,15 +914,9 @@
 
                         <div class="quote-inner">
                           <div class="left mr-1">
-                            <img
-                              src=""
-                              alt=""
-                              width="47"
-                              height="30"
-                              loading="lazy"
-                              srcset=""
-                              sizes="(max-width: 47px) 100vw, 47px"
-                            />
+                            <span class="material-symbols-outlined">
+                              cognition
+                              </span>
                           </div>
                           <div class="right">
                             <div class="p">
@@ -940,7 +934,7 @@
                               <div class="img-wrapper">
                                 <img
                                   class="fit-cover"
-                                  src=""
+                                  src="assets/lt24.webp"
                                   alt=""
                                   loading="lazy"
                                 />
