--- a/offre.html
+++ b/offre.html
@@ -297,6 +297,7 @@
                 <div class="row">
                   <div class="col-md-5 col-12">
                     <div class="text-area">
+                      <img class="flecheposition" src="assets/fleche.png" alt="" loading="lazy">
                       <h1>
                         <span>Votre entreprise mérite</span><br />Une
                         Application qui répond à vos besoins
