--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                   <div class="title">
                     <h2>
                       Lorem ipsum dolor sit amet.
-                      <span>Lorem ipsum dolor sit amet.</span>
+                      <span>Lorem ipsum dolor sit.</span>
                     </h2>
                   </div>
                 </div>
@@ -609,7 +609,7 @@
                               <div class="img-wrapper">
                                 <img
                                   class="fit-cover"
-                                  src=""
+                                  src="assets/showpizz.png"
                                   alt=""
                                   loading="lazy"
                                 />
@@ -840,8 +840,8 @@
                 <div class="mb-4 col-md-10 offset-md-2">
                   <div class="title">
                     <h2>
-                      Lorem ipsum dolor sit amet consectetur.
-                      <span>Lorem, ipsum dolor.</span>
+                      Lorem ipsum dolor 
+                      <span>Lorem, ipsum dolor </span>
                     </h2>
                   </div>
                 </div>
