--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
                   <div class="title">
                     <h2>
                       <span> L' équipe May'tech,<br /></span>une petite équipe
-                      pour des grands logiciels
+                      pour de grands logiciels
                     </h2>
                   </div>
                   <div class="description">
