--- a/singleactu.html
+++ b/singleactu.html
@@ -39,13 +39,12 @@
                     <div
                       class="d-flex align-items-center justify-content-between menu"
                     >
-                      <a href="">
+                      <a href="index.html">
                         <img
                           src="assets/logo.png"
                           alt=""
                           id="logo-maytech"
-                          width="115"
-                          height="120"
+                      
                         />
                       </a>
 
@@ -149,26 +148,21 @@
                           </div>
                         </div>
 
-                        <a href="" class="item-simple">
+                        <a href="blog.html" class="item-simple">
                           Blog
                         </a>
 
                         <a
-                          href=""
+                          href="tarif.html"
                           class="item-simple"
                         >
                           Tarif
                         </a>
 
-                        <a
-                          href=""
-                          class="item-simple"
-                        >
-                          Les plus May'Tech
-                        </a>
+                    
 
                         <a
-                          href=""
+                          href="contact.html"
                           class="item-simple"
                         >
                           Contact
@@ -292,19 +286,16 @@
                 </div>
 
                 <div class="item">
-                  <a href=""> Blog </a>
+                  <a href="blog.html"> Blog </a>
                 </div>
 
                 <div class="item">
-                  <a href=""> Tarif </a>
+                  <a href="tarif.html"> Tarif </a>
                 </div>
 
-                <div class="item">
-                  <a href=""> Les plus May'Tech </a>
-                </div>
 
                 <div class="item">
-                  <a href=""> Contact </a>
+                  <a href="contact.html"> Contact </a>
                 </div>
 
                 <div class="item btn-login">
