--- a/offre.html
+++ b/offre.html
@@ -321,11 +321,14 @@
                   </div>
                   <div class="offset-md-1 col-md-6 col-12">
                     <div class="img-wrapper">
-                      <img
-                        class="lazy"
-                        data-src="assets/iphonemockup2.png"
+                      <picture>
+                        <source media="(min-width:800px)" srcset="assets/iphonemockup2.png">
+                        <img
+                        class=""
+                        src="assets/iphonemockup2.png"
                         alt=""
                       />
+                      </picture>
                     </div>
                   </div>
                 </div>
