--- a/offre.html
+++ b/offre.html
@@ -298,7 +298,7 @@
                 <div class="row">
                   <div class="col-md-5 col-12">
                     <div class="text-area">
-                      <img class="flecheposition" src="assets/arrow2.png" alt="" loading="lazy">
+                      
                       <h1>
                         <span>Votre entreprise mérite</span><br />Une
                         Application qui répond à vos besoins
@@ -315,13 +315,11 @@
                         </p>
                       </div>
 
-                      <div class="cta-line">
-                        <a href="#" class="cta-primary"> Demander un test! </a>
-                      </div>
+                     
                     </div>
                   </div>
                   <div class="offset-md-1 col-md-6 col-12">
-                    <div id="bulle10" class="hidden">
+                    <div id="bulle10" class="hidden2">
                       <picture>
                         <source
                           media="(min-width: 768px)"
@@ -332,14 +330,18 @@
                           src="assets/iphonemockup2.png"
                           width="710"
                           height="553"
-                          srcset="assets/homethird.png"
+                          srcset="assets/iphonemockup2.png"
                           alt="screenshot"
                           loading="lazy"
                         />
                       </picture>
                     </div>
+                    <img class="flecheposition" src="assets/fleche.png" alt="" loading="lazy">
                   </div>
                 </div>
+              </div>
+              <div  class="cta-line">
+                <a id="boutonctahero" href="#" class="cta-primary"> Demander un test! </a>
               </div>
             </div>
           </div>
@@ -504,7 +506,7 @@
                           <picture>
                             <source
                               media="(min-width: 768px)"
-                              srcset="assets/homethird.png"
+                              srcset="assets/mockupios2.png"
                             />
                             <img
                               class=""
