--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                       <div class="items">
                         <div class="sub-menu">
                           <div class="item-simple">
-                            Notre offre <img src="" alt="" />
+                           <a class="item-simple" href="offre.html">Notre offre</a>
                           </div>
 
                           <div class="sub-menu-content">
